crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_signed_integer_literal_base_prefix.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_signed_integer_literal_base_prefix.v
---
[
    CompletionItem {
        label: "sb",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sb",
                del: 24..25,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "sd",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sd",
                del: 24..25,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "sh",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sh",
                del: 24..25,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "so",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "so",
                del: 24..25,
            },
        ),
        snippet_edit: None,
    },
]
