crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_subroutine_in_named_generate_block.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_subroutine_in_named_generate_block.v
---
[
    CompletionItem {
        label: "arg",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "arg",
                del: 170..181,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "local_value",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "local_value",
                del: 170..181,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "f",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "f()",
                del: 170..181,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "f(${1:args})",
                del: 170..181,
            },
        ),
    },
]
