crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_top_level_config_prefix.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_top_level_config_prefix.v
---
[
    CompletionItem {
        label: "config",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "config",
                del: 0..3,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "config ${1:name};\n\tdesign ${2:work.top};\nendconfig",
                del: 0..3,
            },
        ),
    },
    CompletionItem {
        label: "config",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "config",
                del: 0..3,
            },
        ),
        snippet_edit: None,
    },
]
